[gd_scene load_steps=10 format=2]

[ext_resource path="res://main/world/projectile/bullet/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://main/world/projectile/bullet/player_bullet/player_bullet.gd" type="Script" id=2]
[ext_resource path="res://main/world/random_sound_spawner/random_sound_spawner.gd" type="Script" id=3]
[ext_resource path="res://main/world/projectile/bullet/player_bullet/sounds/wall_impact.wav" type="AudioStream" id=4]
[ext_resource path="res://main/world/projectile/bullet/player_bullet/sprites/player_bullet_spritesheet.png" type="Texture" id=5]
[ext_resource path="res://main/world/projectile/bullet/player_bullet/sprites/gun_trail.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 3 )

[sub_resource type="Animation" id=1]
length = 0.36
tracks/0/type = "value"
tracks/0/path = NodePath("Bullet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.045, 0.09, 0.135, 0.18, 0.225, 0.27, 0.315, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 7 ]
}

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 0.694118, 1, 1, 1, 0 )

[node name="PlayerBullet" instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 5
script = ExtResource( 2 )
lifespan = 0.2
speed = 500.0

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 2 )

[node name="WallSounds" type="Node2D" parent="." index="2"]
script = ExtResource( 3 )
sounds = [ ExtResource( 4 ) ]
volume = -19.0
rand_pitch_range = 0.2

[node name="Bullet" type="Sprite" parent="." index="3"]
texture = ExtResource( 5 )
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
playback_speed = 2.0
anims/destroy = SubResource( 1 )

[node name="GunTrail" type="CPUParticles2D" parent="." index="5"]
position = Vector2( -7, 0 )
amount = 16
lifetime = 0.5
speed_scale = 2.25
local_coords = false
texture = ExtResource( 6 )
emission_shape = 1
emission_sphere_radius = 1.25
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.53
color_ramp = SubResource( 3 )
